--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@misc{FSR2020,
+  author       = {{Forensic Science Regulator}},
+  title        = {Guidance: Alcohol Back Calculation for Road Traffic Investigations, FSR-G-220 Issue 2},
+  year         = {2020},
+  howpublished = {Forensic Science Regulator},
+  note         = {Issue 2}
+}
+
 @thesis{thesis,
   title = {Über die Möglichkeiten der forensischen Rückrechnung
 anhand von Atemalkoholkonzentrationen im Vergleich zu
@@ -7,5 +15,13 @@ vergleichende Untersuchung der Kinetiken von
   author = {Armbrecht, Fee-Antoinette},
   year = {2008},
   publisher = {Ludwig-Maximilliants-Universität München}}
-  
+ 
+@misc{RodriguezYao2017,
+  author       = {Rodriguez, R. and Yao, Y.},
+  title        = {Five Things You Should Know about Quantile Regression},
+  year         = {2017},
+  howpublished = {Proceedings of the SAS Global Forum 2017, Paper SAS525-2017},
+  note         = {Paper SAS525-2017}
+}
+ 
 @misc{Mansoor_Mahabadi_2023, title={Volume of distribution}, url={https://www.ncbi.nlm.nih.gov/books/NBK545280/}, journal={StatPearls [Internet].}, publisher={U.S. National Library of Medicine}, author={Mansoor, Asad and Mahabadi, Navid}, year={2023}, month={Jul}} 
