--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -68,9 +68,15 @@ data$height <- data$`Height (cm)`
 data$age <- data$`Age (years)`
 data$beta <- -data$beta60
 ```
-<p style="font-size:2em;">Contents</p>
 
-<div id="custom-toc"></div>
+<p style="font-size:2em;">
+
+Contents
+
+</p>
+
+::: {#custom-toc}
+:::
 
 ```{=html}
 <script>
@@ -83,7 +89,6 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 </script>
 ```
-
 \newpage
 
 # Executive Summary
@@ -234,7 +239,7 @@ corr_table <- data %>%
 kable(
   corr_table,
   digits = 5,
-  caption = "Correlations Between Beta and Each Characteristic (with P-values)"
+  caption = "Table 1: Correlations Between Beta and Each Characteristic (with P-values)"
 )
 ```
 
@@ -246,7 +251,7 @@ Due to the clear relationships between $\beta$ and characteristics of the tested
 
 ### Finding Distribution Method
 
-An issue with creating a distribution from the $\beta$ elimination rate values given is that we only have 100 data points. Therefore the distribution is very dependent on not many values. We propose instead investigating if $\beta$ follows a standard distribution. First, we will examined the general spread of $\beta$ values given in the following histogram, where the mean, 2.5th, and 97.5th quantiles are indicated in red.
+An issue with creating a distribution from the $\beta$ elimination rate values given is that we only have 100 data points. Therefore the distribution is very dependent on not many values. We propose instead investigating if $\beta$ follows a standard distribution. First, we will examined the general spread of $\beta$ values given in the following figure, where the mean, 2.5th, and 97.5th quantiles are indicated in red.
 
 ```{r density_plot, echo = FALSE, message = FALSE, warning=FALSE, fig.width=20, fig.height=10, fig.align='center'}
 
@@ -269,7 +274,7 @@ density_plot <- ggplot(data, aes(x = beta)) +
              linetype = "dotted",
              color = "red",
              size = 2) +
-  labs(x = expression(""*beta), y = "Density", title = expression("Distribution of "*beta))
+  labs(x = expression(""*beta), y = "Density", title = expression("Figure 5: Distribution of "*beta))
 
 density_plot
 ```
@@ -336,13 +341,13 @@ sex_density_plot <- ggplot(data, aes(x = beta, fill = sex)) +
   labs(
     x = expression(beta),
     y = "Density",
-    title = expression("Distribution of "*beta*" by Sex")
+    title = expression("Figure 6: Distribution of "*beta*" by Sex")
   )
 
 sex_density_plot
 ```
 
-These visualisations can point us towards a few different distributions. We can analyse how well the data fits the distributions in the following plots.
+Thesefigures can point us towards a few different distributions. We can analyse how well the data fits the distributions in the following plots.
 
 #### Residual Plots of Fitted Distributions
 
@@ -358,7 +363,7 @@ gamma_fit  <- fitdist(data$beta, distr = "gamma", method = "mle")
 plot.legend <- c("Normal", "Beta", "Gamma")
 
 # Layout
-par(mfrow = c(2, 2), mar = c(5, 5, 3, 2), cex = 2)
+par(mfrow = c(2, 2), mar = c(5, 5, 3, 2), oma = c(0, 0, 5, 0), cex = 2)
 
 # --- DENSITY (custom lines) ---
 cols <- c("red", "green", "blue")
@@ -405,6 +410,9 @@ ppcomp(
   main = "PP Plot Comparison",
   xlegend = "bottomright"
 )
+
+# --- Add main title across all plots ---
+mtext("Figure 7: Comparison of Fitted Distributions", outer = TRUE, cex = 3, font = 2)
 ```
 
 #### Normal Distribution
@@ -445,7 +453,7 @@ gamma_rate <- gamma_fit$estimate[[2]]
 q025 <- qgamma(0.025, gamma_shape, gamma_rate)
 ```
 
-The 2.5% quantile in the gamma distribution of $\beta$ is 0.1257847. The Density graph of the gamma distribution across the whole population of Gamma is shown below to demonstrate fit, again with the mean, 2.5th, and 97.5th quantiles indicated in red.
+The 2.5% quantile in the gamma distribution of $\beta$ is 0.1257847. The density graph of the gamma distribution across the whole population of Gamma is shown below to demonstrate fit, again with the mean, 2.5th, and 97.5th quantiles indicated in red.
 
 ```{r gamma_density_plot, echo = FALSE, message=FALSE, warning=FALSE, fig.width=20, fig.height=10, fig.align='centre'}
 gamma_df <- data.frame(
@@ -489,7 +497,7 @@ gamma_plot <- ggplot(data, aes(x = beta)) +
   labs(
     x = expression(beta),
     y = "Density",
-    title = expression("Gamma Distribution of "*beta),
+    title = expression("Figure 8: Gamma Distribution of "*beta),
     linetype = "Quantile"
   ) 
 
@@ -583,7 +591,7 @@ sex_gamma_plot <- ggplot(data, aes(x = beta)) +
   labs(
     x = expression(beta),
     y = "Density",
-    title = expression("Gamma Distributions of "*beta*" by Sex")
+    title = expression("Figure 9:Gamma Distributions of "*beta*" by Sex")
   )
 
 sex_gamma_plot
@@ -610,8 +618,6 @@ Y_i &= \beta_0
 \end{aligned}
 $$
 
-#### Residual Plots for Linear Model
-
 ```{r modelling_beta, echo = FALSE, message = FALSE, warning=FALSE, fig.width=20, fig.height=20, fig.align='center'}
 # --- linear modelling beta 60 attempt ---
 
@@ -619,15 +625,18 @@ $$
 lm_model <- lm(beta ~ weight + height + sex, data = data)
 
 # Residual plots
-par(mfrow = c(2, 2), mar = c(4.5, 4.5, 3, 2), cex = 2)
+par(mfrow = c(2, 2), mar = c(5, 5, 3, 2), oma = c(0, 0, 5, 0), cex = 2)
 
-plot(lm_model, which = 1, caption = "", main = "Residuals vs Fitted", sub.caption = "", cex.main = 2)
+plot(lm_model, which = 1, caption = "", main = "Residuals vs Fitted", sub.caption = "", cex.main = 1.5)
 
-plot(lm_model, which = 2, caption = "", main = "Q-Q Residuals", sub.caption = "", cex.main = 2)
+plot(lm_model, which = 2, caption = "", main = "Q-Q Residuals", sub.caption = "", cex.main = 1.5)
 
-plot(lm_model, which = 3, caption = "", main = "Scale Location", sub.caption = "", cex.main = 2)
+plot(lm_model, which = 3, caption = "", main = "Scale Location", sub.caption = "", cex.main = 1.5)
 
-plot(lm_model, which = 5, caption = "", main = "Residuals vs Leverage", sub.caption = "", cex.main = 2)
+plot(lm_model, which = 5, caption = "", main = "Residuals vs Leverage", sub.caption = "", cex.main = 1.5)
+
+# --- Add main title across all plots ---
+mtext("Figure 10: Residual Plots for Linear Model", outer = TRUE, cex = 3, font = 2)
 ```
 
 -   `Residual vs Fitted`: There is a change of variance with mean, so the constant variance assumption is slightly violated. Unfortunately there is little data points to establish if this is an important violation.
@@ -655,8 +664,6 @@ $$
 
 We get the following residual graphs.
 
-#### Residual Plots for Square Root Linear Model
-
 ```{r lm, echo = FALSE, message = FALSE, warning=FALSE, fig.width=20, fig.height=20, fig.align='center'}
 
 # Try modelling square root of beta (residual plots indicate a slight quadratic mean-variance relationship)
@@ -664,15 +671,18 @@ We get the following residual graphs.
 sqrt_lm_model <- lm(sqrt(beta) ~ weight + height + sex, data = data)
 
 # Residual plots
-par(mfrow = c(2, 2), mar = c(4.5, 4.5, 3, 2), cex = 2)
+par(mfrow = c(2, 2), mar = c(5, 5, 3, 2), oma = c(0, 0, 5, 0), cex = 2)
 
-plot(sqrt_lm_model, which = 1, caption = "", main = "Residuals vs Fitted", sub.caption = "", cex.main = 2)
+plot(sqrt_lm_model, which = 1, caption = "", main = "Residuals vs Fitted", sub.caption = "", cex.main = 1.5)
 
-plot(sqrt_lm_model, which = 2, caption = "", main = "Q-Q Residuals", sub.caption = "", cex.main = 2)
+plot(sqrt_lm_model, which = 2, caption = "", main = "Q-Q Residuals", sub.caption = "", cex.main = 1.5)
 
-plot(sqrt_lm_model, which = 3, caption = "", main = "Scale Location", sub.caption = "", cex.main = 2)
+plot(sqrt_lm_model, which = 3, caption = "", main = "Scale Location", sub.caption = "", cex.main = 1.5)
 
-plot(sqrt_lm_model, which = 5, caption = "", main = "Residuals vs Leverage", sub.caption = "", cex.main = 2)
+plot(sqrt_lm_model, which = 5, caption = "", main = "Residuals vs Leverage", sub.caption = "", cex.main = 1.5)
+
+# --- Add main title across all plots ---
+mtext("Figure 11: Residual Plots for Square Root Model", outer = TRUE, cex = 3, font = 2)
 ```
 
 The `Q-Q Residuals` plot is improved, however there is only marginal change in the `Residuals vs Fitted` plot. Therefore we explore alternative methods.
@@ -753,7 +763,7 @@ quantile_v_lm_plot <- ggplot() +
   ) +
   # Labels and theme
   labs(
-    title = expression("Actual vs Predicted " * beta * " with 95% Prediction Interval"),
+    title = expression("Figure 12: Actual vs Predicted " * beta * " with 95% Prediction Interval"),
     x = expression("Actual " * beta),
     y = expression("Predicted " * beta),
     color = "Model Type"
@@ -874,7 +884,7 @@ results <- data.frame(
 
 kable(
   results,
-  caption = "Summary of Back-Calculated Blood-Alcohol Concentration (C₀)",
+  caption = "Table 2: Summary of Back-Calculated Blood-Alcohol Concentration (C₀)",
   col.names = c("Statistic", "Value"),
   align = c("l", "c"),
   format = "markdown"
@@ -937,7 +947,7 @@ results <- data.frame(
 
 kable(
   results,
-  caption = "Summary of Back-Calculated Blood-Alcohol Concentration using Quantile Regression (C₀)",
+  caption = "Table 3: Summary of Back-Calculated Blood-Alcohol Concentration using Quantile Regression (C₀)",
   col.names = c("Statistic", "Value"),
   align = c("l", "c"),
   format = "markdown"
@@ -996,7 +1006,7 @@ pdf_beta <- dgamma(beta, shape = gamma_shape, rate = gamma_rate)
 # Plot C0 vs beta
 plot(beta, C0, type = "l", lwd = 2, col = "blue",
      xlab = expression(beta), ylab = expression(C[0]),
-     main = expression(paste("BAC at C_0 vs Elimination Rate (", beta, ")")))
+     main = expression(paste("Figure 13: BAC at C_0 vs Elimination Rate (", beta, ")")))
 
 # Add horizontal line for legal limit on C0 scale
 abline(h = C_legal, col = "darkgreen", lwd = 2, lty = 2)
@@ -1098,7 +1108,7 @@ results_table <- tibble(
 
 kable(results_table, digits = 3,
       col.names = c("Approach", "Lower (2.5%)", "Central", "Upper (97.5%)"),
-      caption = "Comparison of estimated C₀ values for the various approaches")
+      caption = "Table 4: Comparison of estimated C₀ values for the various approaches")
 ```
 
 The legal limit is 0.47g/kg.
@@ -1133,7 +1143,7 @@ Hence, given we are provided the data for $A$, $\text{Weight}$, and $C_0$, we ca
 
 Similar to our approach in analysing the effectiveness of the $\beta$ elimination rate, we can investigate the relationships between $V_d$ and characteristics of individuals (weight, height, age, and sex). It is also worth investigating the distribution of $V_d$ values across our sample.
 
-Figures 5-9 help us visualise these relationships.
+Figures 14-18 help us visualise these relationships.
 
 ```{r task_3, echo = FALSE, message = FALSE, warning=FALSE, fig.width=20, fig.height=10, fig.align='center'}
 
@@ -1166,7 +1176,7 @@ density_plot <- ggplot(data, aes(x = Vd)) +
              linetype = "dotted",
              color = "red",
              size = 2) +
-  labs(x = "Vd (L/kg)", y = "Density", title = expression("Distribution of Vd"))
+  labs(x = "Vd (L/kg)", y = "Density", title = expression("Figure 14: Distribution of Vd"))
 
 density_plot
 ```
@@ -1177,21 +1187,21 @@ weight_plot2 <- ggplot(data, aes(x = weight, y = Vd, colour = sex)) +
   geom_point(size = 3) +
   geom_smooth(method = "lm", colour = "navy") +
   scale_colour_manual(values = c("male" = "skyblue", "female" = "seagreen")) +
-  labs(title = "Figure 6: Vd vs Weight", x = "Weight (kg)", y = "Vd (L/kg)")
+  labs(title = "Figure 15: Vd vs Weight", x = "Weight (kg)", y = "Vd (L/kg)")
 
 # Vd vs height
 height_plot2 <- ggplot(data, aes(x = height, y = Vd, colour = sex)) +
   geom_point(size = 3) +
   scale_colour_manual(values = c("male" = "skyblue", "female" = "seagreen")) +
   geom_smooth(method = "lm", colour = "navy") +
-  labs(title = "Figure 7: Vd vs Height", x = "Height (cm)", y = "Vd (L/kg)")
+  labs(title = "Figure 16: Vd vs Height", x = "Height (cm)", y = "Vd (L/kg)")
 
 # Vd vs age
 age_plot2 <- ggplot(data, aes(x = age, y = Vd, colour = sex)) +
   geom_point(size = 3) +
   scale_colour_manual(values = c("male" = "skyblue", "female" = "seagreen")) +
   geom_smooth(method = "lm", colour = "navy") +
-  labs(title = "Figure 8: Vd vs Age", x = "Age (years)", y = "Vd (L/kg)")
+  labs(title = "Figure 17: Vd vs Age", x = "Age (years)", y = "Vd (L/kg)")
 
 # Vd vs gender
 sex_plot2 <- ggplot(data, aes(x = sex, y = Vd,
@@ -1200,7 +1210,7 @@ sex_plot2 <- ggplot(data, aes(x = sex, y = Vd,
   geom_boxplot(width = 0.2, color = "navy", alpha = 0.7) +
   scale_fill_manual(values = c("seagreen", "skyblue")) +
   labs(
-    title = "Figure 9: Vd vs Gender",
+    title = "Figure 18: Vd vs Gender",
     x = "Gender",
     y = "Vd (L/kg)"
   ) +
@@ -1229,26 +1239,32 @@ Figures 6-9 highlight the following relationships:
 
 The above findings suggest that $V_d$ seems to differ little across various characteristics of the individual. This suggests $V_d$ is a more generalised approach compared to the $\beta$ elimination rate.
 
-It is also worth considering how the two rates are correlated, as independence is assumed between $\beta$ and $V_d$. Performing a correlation test between the two can help to deduce whether this assumption is upheld. Further, Figure 10 helps to visualise the relationship between $\beta$ and $V_d$.
+It is also worth considering how the two rates are correlated, as independence is assumed between $\beta$ and $V_d$. Performing a correlation test between the two can help to deduce whether this assumption is upheld. Further, Figure 19 helps to visualise the relationship between $\beta$ and $V_d$.
 
 ```{r task_3 correlation, echo = FALSE, message = FALSE, warning=FALSE, fig.width=20, fig.height=10, fig.align='center'}
 
-# Test correlation to investigate independent assumption
-cor.test(data$beta, data$Vd, use = "complete.obs")
+# Test correlation to investigate independence assumption
+corr_test <- cor.test(data$beta, data$Vd, use = "complete.obs")
 
+# Extract correlation coefficient and p-value
+corr_coef <- corr_test$estimate
+p_value   <- corr_test$p.value
 
 # View quantiles of each coefficient for comparison
 beta_range <- quantile(data$beta, probs = c(0.025, 0.975))
 Vd_range   <- quantile(data$Vd, probs = c(0.025, 0.975))
 
-# Scatter plot between beta and V_d
+# Scatter plot between beta and Vd
 ggplot(data, aes(x = beta, y = Vd, colour = sex)) +
   geom_point(size = 3) +
   scale_colour_manual(values = c("male" = "skyblue", "female" = "seagreen")) +
   geom_smooth(method = "lm", color = "navy") +
   labs(
-    title = "Figure 10: Relationship between β and Vd",
-    subtitle = paste("Correlation =", round(cor(data$beta, data$Vd, use = "complete.obs"), 3)),
+    title = "Figure 19: Relationship between β and Vd",
+    subtitle = paste0(
+      "Correlation = ", round(corr_coef, 3),
+      ",  p-value = ", format.pval(p_value, digits = 5, eps = .00001)
+    ),
     x = "β elimination rate (g/kg/h)",
     y = "Vd (L/kg)"
   )
@@ -1265,7 +1281,7 @@ The current method offers several key strengths that make it well-suited for for
 
 ### Limitations of Current Method
 
-The current forensic method assumes independence between $\beta$ and $V_d$ when calculating the range for $C_t$. However, a Pearson's product-moment correlation analysis reveals a statistically significant negative correlation between these two parameters (correlation coefficient = -0.4036489, p-value = 3.122e-05 \< 0.05). This finding directly contradicts the independence assumption underlying the current approach.
+The current forensic method assumes independence between $\beta$ and $V_d$ when calculating the range for $C_t$. However, a Pearson's product-moment correlation analysis reveals a statistically significant negative correlation between these two parameters (correlation coefficient = -0.404, p-value = $3.122\times10^{-5}$ \< 0.05). This finding directly contradicts the independence assumption underlying the current approach.
 
 Although the official forensic procedure specifies using the 97.5th percentile for both $\beta$ and $V_d$, this convention is based on policy rather than mathematical reasoning. Forensic laboratories apply the same "upper percentile rule" across all parameters to maintain consistency and to err on the side of caution, as using higher parameter values for $\beta$ and $V_d$ generally produces lower blood alcohol estimates. Mathematically Widmark's equation shows that $C_t$ decreases as $\beta$ and $V_d$ both increase, thus the maximum possible value of $C_t$ would occur for low $\beta$ and low $V_d$ values (their 2.5th percentiles). Regardless of which tail is used, the critical statistical issue with the current method is that it assumes that $\beta$ and $V_d$ are independent, when our analysis shows that $\beta$ and $V_d$ have a significant negative correlation.
 
@@ -1284,7 +1300,7 @@ ggplot(data, aes(x = beta, y = Vd)) +
   geom_hline(yintercept = quantile(data$Vd, 0.975, na.rm = TRUE), 
              linetype = "dashed", color = "blue", linewidth = 1) +
   labs(
-    title = "Joint Distribution of β and Vd",
+    title = "Figure 20: Joint Distribution of β and Vd",
     subtitle = "Blue lines show marginal 97.5th percentiles",
     x = "β (g/kg/h)",
     y = "Vd (L/kg)"
@@ -1330,7 +1346,7 @@ results_compare <- tibble(
 )
 
 kable(results_compare, align = "lccc",
-      caption = "Comparison of Empirical Joint vs Independent Ct")
+      caption = "Table 5:Comparison of Empirical Joint vs Independent Ct")
 
 ```
 
